cabal-version: 2.2
name: icmp
version: 0.1.0.0
synopsis: icmp requests
description:
  This library provides functions that have similar behavior as the
  unix command-line utility ping. In particular, both emit ICMP echo requests
  and wait for responses. This library uses a haskell implementation of ICMP
  rather than invoking `/bin/ping`. This avoids the costly process of starting
  a child process. Additionally, there are greater opportunities for reusing
  sockets. The cost of this is that the user must ensure that one of these
  is true:
  .
  * The kernel parameter `net.ipv4.ping_group_range` has been configured
    to allow pings to all IP addresses. (preferred solution)
  .
  * The process is running with the the `CAP_NET_RAW` capability.
  .
  * The process is running as root. (worst solution)
  .
homepage: https://github.com/andrewthad/icmp
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
category: Network
build-type: Simple
extra-source-files:
  CHANGELOG.md
  include/custom.h

library
  build-depends:
    , base >= 4.11.1 && <5
    , ip >= 1.4
    , cpu >= 0.1.2
    , posix-api
    , primitive >= 0.6.4
    , primitive-containers >= 0.3.1
    , stm >= 2.5
    , transformers >= 0.5.5
  exposed-modules: Network.Icmp.Ping
  other-modules:
    Network.Icmp.Marshal
    Network.Icmp.Ping.Single
    Network.Icmp.Ping.Hosts
    Network.Icmp.Ping.Multihosts
    Network.Icmp.Common
  hs-source-dirs: src
  default-language: Haskell2010
  build-tools: hsc2hs
  ghc-options: -O2 -Wall -ddump-to-file -dsuppress-all -ddump-simpl
  include-dirs: include
  includes: custom.h
